# copdips.github.io

./: .gitignore  .markdownlint.yaml  CNAME  Gemfile  Makefile  README.md  _config.yml  ads.txt  feed.xml  index.html  mkdocs.yml  posts_by_tag.md  pyproject.toml  requirements.txt  robots.txt  sitemap.xml
.github/: dependabot.yml
.github/workflows/: build-jekyll.yml  build_and_deploy.yml  check_pr_changes.yml  dependabot.yml  sync-to-gitee.yml
2018/05/: grep-like-powershell-colorful-select-string.html  powershell-stop-parsing.html  setting-up-github-pages-with-custom-domain-over-https.html  setting-up-jekyll-with-minimal-mistakes-theme-on-windows.html  setting-up-powershell-gallery-and-nuget-gallery-for-powershell.html  using-readline-in-python-repl-on-windows.html
2018/06/: converting-python-json-list-to-csv-in-2-lines-of-code-by-pandas.html  (+3 more)
2019/06/: git-cheat-sheet.html
_archive_jekyll/: Gemfile  README.md  _config.yml
_data/: navigation.yml
_drafts/: 2018-05-07-setting-up-jekyll-on-windows.md  2018-06-01-powershell-stop-parsing.md
_includes/: archive-single.html  author-profile.html  footer.html  head.html  hit-count.html  page__meta.html  social-share.html
_layouts/: single.html
_posts/: 2018-05-03-setting-up-github-pages-with-custom-domain-over-https.md
_sass/: minimal-mistakes.scss
docs/: .authors.yml  .meta.yml  _config.yml
draft/: migrating_from_jekyll_to_mkdocs_material.md
page2/: index.html
page3/: index.html
page4/: index.html
page5/: index.html
page6/: index.html
page7/: index.html
page8/: index.html
page9/: index.html
scripts/: fix_head.py  fix_headers.py  fix_multiple_blank_lines.py  reload_page.py  remove_gremlins.py
tags/: index.html  index.md  powershell.html
temp1/lib_1/: pyproject.toml
temp1/lib_1/src/lib_1/: __init__.py
tools/: pymdownx_md_render.py
year-archive/: index.html
(+395 files in other folders)
