[project]
name = "copdips-github-io"
version = "0.1.0"
description = "My blog: https://copdips.com/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "csv2md>=1.4.0",
    "mkdocs>=1.6.1",
    "mkdocs-material[git,imaging,recommended]>=9.6.15",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=0.29.1",
    "mkdocstrings-python>=1.16.12",
    "mkdocs-video>=1.5.0",
    "mkdocs-glightbox>=0.4.0",
    "mkdocs-rss-plugin>=1.17.3",
    "mkdocs-minify-html-plugin>=0.3.1",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=1.17.0",
    "pyright>=1.1.403",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
