[project]
name = "copdips-github-io"
version = "0.1.0"
description = "My blog: https://copdips.com/"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "csv2md>=1.6.0",
    "mkdocs>=1.6.1",
    "mkdocs-material[git,imaging,recommended]>=9.7.6",
    "mkdocs-material-extensions>=1.3.1",
    "mkdocstrings>=1.0.4",
    "mkdocstrings-python>=2.0.3",
    "mkdocs-video>=1.5.0",
    "mkdocs-glightbox>=0.5.2",
    "mkdocs-rss-plugin>=1.19.0",
    "mkdocs-minify-html-plugin>=0.3.10",
]

[dependency-groups]
dev = [
    "ipdb>=0.13.13",
    "mypy>=2.0.0",
    "pyright>=1.1.409",
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["tools"]
