[project]
name = "lib-1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Xiang ZHU", email = "xiang.zhu@outlook.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.8.0,<0.9"]
build-backend = "uv_build"
